--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
                     <div class="contatti-sx">
                         <img src="img/avatar_io.jpg" alt="img">
-                        <strong>Pola</strong>
+                        <span>Pola</span>
                     </div>
 
                     <div class="contatti-dx">
@@ -41,8 +41,8 @@
                 <div class="notifiche-onOff">
                     <div class="icona-notifica"><i class="fa-solid fa-bell-slash"></i></div>
                     <div class="testo-notifica">
-                        <span>Ricevi notifiche di nuovi messaggi</span>
-                        <span>Attiva notifiche desktop</span>
+                        <span class="testo-notifica-1">Ricevi notifiche di nuovi messaggi</span>
+                        <span class="testo-notifica-2">Attiva notifiche desktop</span>
                     </div>
                 </div>
 
@@ -64,20 +64,18 @@
 
                                 <div class="interno-contatto">
                                     <!-- fa visualizzare il nome  -->
-                                    <strong>{{contatto.name}}</strong>
+                                    <span>{{contatto.name}}</span>
 
-                        <!-- test: messaggio e orario preso provvisoriamente -->
-                                    <span>{{contatto.messages[0].message}}</span>
+                        <!-- info ultimo messaggio sotto il contatto -->
+                                    <span class="ultimo-messaggio">
+                                        <!-- visualizza l'ultimo messaggio riguardante quella chat -->
+                                        {{prendiUltimoMess(contatto)}}
+                                    </span>
                                 </div>
-                                <span class="orario">{{
-                                    contatto.messages[0].date[11]
-                                    + contatto.messages[0].date[12] 
-                                    + contatto.messages[0].date[13]
-                                    + contatto.messages[0].date[14]
-                                    + contatto.messages[0].date[15] 
-                                    }}
+                                <span class="orario">
+                                    <!-- visualizza l'orario riguardante ultimo messaggio della chat -->
+                                    {{prendiOrario(contatto)}}
                                 </span>
-                        <!-- test: messaggio e orario preso provvisoriamente -->
                         </li>
                     </ul>
                 </div>
@@ -113,7 +111,7 @@
                 <div class="chat-bar">
                     
                     <button class="bottone-emoticons"><i class="fa-regular fa-face-smile"></i></button>
-                    <input v-model="nuovoMessaggio" @keyup.enter="addMessage()" class="input-chat" type="text">
+                    <input v-model="nuovoMessaggio" @keyup.enter="addMessage()" class="input-chat" type="text" placeholder="Scrivi un messaggio">
                     <button class="bottone-microfono"><i class="fa-solid fa-microphone"></i></button>
 
                 </div>
