feat: cancellazione messaggio

--- a/index.html
+++ b/index.html
@@ -119,26 +119,20 @@
                 <!-- sezione in cui si visualizzano i vari messaggi inviati e ricevuto della chat attiva -->
                 <div class="chat-attiva">
                     <!-- ciclo che crea in pagina i messaggi presenti in memoria con quel contatto -->
-                    <div v-for="messaggio in contatti[indexActive].messages" :class=" messaggio.status == 'sent' ? 'sent' : 'received'" class="messaggio">
+                    <div v-for="(messaggio , index) in contatti[indexActive].messages" :class=" messaggio.status == 'sent' ? 'sent' : 'received'" class="messaggio">
                         <div :class="messaggio.status == 'sent' ? 'green' : 'white'" class="message" >
-                            <span>{{messaggio.message}}</span> 
+                            <span>{{messaggio.message}}</span>  
                             <span class="orario orario-messaggio">{{prendiOrarioMessaggio(messaggio)}}</span>
                             <button type="button" class="dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"></button>
                             <div class="btn-group">
                                 <ul class="dropdown-menu dropdown-menu-end">
-                                  <li><button class="dropdown-item" type="button">Rispondi al messaggio</button></li>
-                                  <li><button class="dropdown-item" type="button">Cancella Messaggio</button></li>
-                                  <li><button class="dropdown-item" type="button">Info messaggio</button></li>
+                                    <li><button class="dropdown-item" type="button">Rispondi al messaggio</button></li>
+                                    <li><button @click="eliminaMessaggio(index)" class="dropdown-item" type="button">Cancella Messaggio</button></li>
+                                    <li><button class="dropdown-item" type="button">Info messaggio</button></li>
                                 </ul>
-                              </div>
-
+                            </div>
                         </div> 
-
-
                     </div>
-
-
-                
                 </div>
                 
                 <!-- sezione input di nuovi messaggi in basso  -->
