feat: cambio icona mentre si digita un messaggio

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                         <button class="bottone-emoticons"><i class="fa-regular fa-face-smile"></i></button>     
                         <!-- alla pressione del tasto enter parte la funzione creata in vuejs per inviare e quindi aggiungere un nuovo messsaggio in memoria -->
                         <input v-model="nuovoMessaggio" @keyup.enter="addMessage()" class="input-chat" type="text" placeholder="Scrivi un messaggio">   <!-- campo di testo per inviare un nuovo messaggio collegato con v-model a vuejs per regolare il filtraggio della lista cotatti -->
-                        <button class="bottone-microfono"><i class="fa-solid fa-microphone"></i></button>
+                        <button  class="bottone-microfono"><i :class="nuovoMessaggio == '' ? 'fa-solid fa-microphone' : 'fa-sharp fa-regular fa-paper-plane' " class=""></i></button>
                     </div>
                 </div>
             </div>
