feat: aggiunta di una nuova chat

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                             <span><i class="fa-sharp fa-solid fa-circle-notch"></i></span>
                             <span><i class="fa-solid fa-message"></i></span>
                             <span><i class="fa-solid fa-ellipsis-vertical"></i></span>
+                            <span class="aggiunta-chat" @click="nuovaChat()"><strong>+</strong></span>
                         </div>
                     </div>
                     
